--- a/public/global.css
+++ b/public/global.css
@@ -1,7 +1,8 @@
 html, body {
-	position: relative;
+	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+	min-height: -webkit-fill-available;
 }
 
 body {
